--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,11 @@
-name: build and publish
-
-# TODO:
-# - add the `workflow_run` event and remove the `build` and `publish` jobs from the `auto-build-and-publish.yml` workflow
-
 on:
   workflow_dispatch:
-    inputs:
-      tag:
-        description: 'ethereum/solidity repository tag to build'
-        required: true
-        type: string
+  schedule:
+    # check every Monday at 8:00AM
+    - cron: '0 8 * * 1'
 
-permissions: {}
+permissions:
+  contents: none
 
 jobs:
   fetch-tags:
@@ -21,13 +15,19 @@ jobs:
       release_tag: ${{ steps.solc-release.outputs.release_tag }}
       release_version: ${{ steps.solc-release.outputs.release_version }}
     steps:
-      - id: solc-release
-        env:
-          TAG: ${{ github.event.inputs.tag }}
+      - name: Install dependencies
         run: |
-          echo ::set-output name=current_tag::v0.0.0
-          version=${TAG#v}
-          echo ::set-output name=release_tag::$TAG
+          sudo apt-get -y update
+          # libjsoncpp-dev for v0.4.*
+          sudo apt-get -y install build-essential cmake git libboost-all-dev libjsoncpp-dev jq
+      - uses: actions/checkout@v2
+      - name: Fetch latest solidity tag
+        id: solc-release
+        run: |
+          echo ::set-output name=current_tag::$(cat linux/aarch64/.current-tag)
+          tag_name=$(curl -sL https://api.github.com/repos/ethereum/solidity/releases/latest | jq -r ".tag_name")
+          version=${tag_name#v}
+          echo ::set-output name=release_tag::$tag_name
           echo ::set-output name=release_version::$version
 
   build:
@@ -67,17 +67,13 @@ jobs:
       - name: Rename binary
         run: |
           mv linux/aarch64/solc linux/aarch64/solc-${{ needs.fetch-tags.outputs.release_tag }}
-      - if: github.event_name != 'workflow_dispatch'
-        name: Update current tag
+      - name: Update current tag
         run: |
           echo ${{ needs.fetch-tags.outputs.release_tag }} > linux/aarch64/.current-tag
       - name: Update list.json
         run: |
           shasum=$(sha256sum linux/aarch64/solc-${{ needs.fetch-tags.outputs.release_tag }})
           shasum=${shasum:0:64}
-
-          jq 'del(.builds[] | select(.version == "${{ needs.fetch-tags.outputs.release_version }}"))' linux/aarch64/list.json > list.json.tmp && mv list.json.tmp linux/aarch64/list.json
-
           jq --arg v "${{ needs.fetch-tags.outputs.release_version }}" --arg s "$shasum" '.builds += [{"version": $v, "sha256": $s}]' linux/aarch64/list.json > list-tmp.json && mv list-tmp.json linux/aarch64/list.json
           jq --arg v "${{ needs.fetch-tags.outputs.release_version }}" --arg t "solc-${{ needs.fetch-tags.outputs.release_tag }}" '.releases[$v] = $t' linux/aarch64/list.json > list-tmp.json && mv list-tmp.json linux/aarch64/list.json
       - name: Upload binary
@@ -85,9 +81,11 @@ jobs:
           if [[ $(git status -s) ]]; then
             git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git config --local user.name "github-actions[bot]"
+
             git add linux/aarch64/solc-${{ needs.fetch-tags.outputs.release_tag }}
             git add linux/aarch64/.current-tag
             git add linux/aarch64/list.json
+
             git commit -m "Add solc-${{ needs.fetch-tags.outputs.release_tag }} binary"
             git push
           fi
